<resources>
    <string name="app_name">Dcvsconnectwidget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="homecd">Home Button</string>
    <string name="chatcd">Chat Button</string>
    <string name="funcd">Fun Button</string>
    <string name="helpcd">Help Button</string>
    <string name="skypecd">Skype Button</string>
    <string name="groupcd">Group Chat Button</string>
    <string name="gamescd">Games Button</string>
    <string name="internetcd">Internet Button</string>
    <string name="remotecd">Remote Help Button</string>
    <string name="helpguidecd">Help Guide Button</string>
    <string name="euchrecd">Euchre Button</string>
    <string name="solitarecd">Solitare Button</string>
    <string name="backgammoncd">Backgammon Button</string>
    <string name="chesscd">Chess Button</string>
    <string name="finarcd">Four in a row button</string>
    <string name="sudokucd">Sudoku Button</string>
    <string name="googlecd">Google Button</string>
    <string name="abccd">ABC News Button</string>
    <string name="naccd">Nundah Activity Centre button</string>
    <string name="mapcd">Map Button</string>
    <string name="sevencd">Seven news Button</string>
    <string name="seniorcd">Seniors Online Button</string>
    <string name="skypev1">Call DCVS Volunteer 1</string>
    <string name="skypev2">Call DCVS Volunteer 2</string>
    <string name="skypedcvsoffice">Call DCVS Office</string>
    <string name="skypedcvshelpdesk">Call DCVS Help Desk</string>
    <string name="widgetbackdrop">DCVS Widget</string>
    <string name="radiocd">Radio Button</string>
    <string name="radioplaycd">Play the Radio Button</string>
    <string name="radiopausecd">Pause the Radio Button</string>
    <string name="radiostopcd">Stop the Radio</string>
    <string name="radiobgcd">Radio Background Image</string>
    <string name="title_activity_dcvsradio2">DCVS Radio</string>
    <string name="bgimg">Background Image</string>
</resources>
