<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.dcvs.nac.dcvsconnectwidget.Dcvschat"
    android:background="@drawable/dcvscbg">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skypebtn"
        android:background="#00ffffff"
        android:contentDescription="@string/skypecd"
        android:onClick="skypeonclick"
        android:src="@drawable/dcvsvcbtn"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/groupchatbtn"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:background="#00ffffff"
        android:contentDescription="@string/groupcd"
        android:onClick="googleonclick"
        android:src="@drawable/dcvsgcbtn" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dcvsv1"
        android:layout_alignTop="@+id/skypebtn"
        android:layout_toEndOf="@+id/skypebtn"
        android:src="@drawable/dcvsv1"
        android:background="#00ffffff"
        android:contentDescription="@string/skypev1" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dcvsv2"
        android:layout_below="@+id/dcvsv1"
        android:layout_alignStart="@+id/dcvsv1"
        android:layout_marginTop="41dp"
        android:contentDescription="@string/skypev2"
        android:src="@drawable/dcvsv2"
        android:background="#00ffffff" />
</RelativeLayout>
